# SLATE-rMC

./: .gitattributes  .gitignore  AGENTS.md  FILE_MANIFEST.json  PLANS.md  README.md  SEED_CONTENTS.md  WORKTREE_LAUNCH.md  pyproject.toml
.codex/: setup.sh
docs/: ARCHITECTURE.md  CODEX_EXECUTION.md  CONTINUOUS_EWAL_COATING_STRATEGY.md  CONTRACTS.md  CONVENTIONS.md  DECISIONS.md  DOVETAIL_MATRIX.md  ERROR_INJECTION.md  EXAMPLES.md  FITTING_ROADMAP.md  HBN_RING_FITTER_MINIMUM_SPEC.md  LEGACY_REFERENCE.md  OSC_COORDINATES.md  PERFORMANCE.md  PHYSICS_LEDGER.md  RESULT_MEASURE.md  SCOPE_AND_PHASES.md  TRACE_SCHEMA.md  VALIDATION.md  WORKBRANCH_ARCHIVE_2026-07-16.md
examples/: DATA_PROVENANCE.md  MANIFEST.toml  README.md
reference/: README.md  rasim_reference_v1.npz  reference_manifest.toml
schemas/: proof_result.schema.json  selection_manifest.schema.json  stage_trace.schema.json
scripts/: generate_bi2se3_detector_image.py  verify_seed.py
tasks/: 00_bootstrap.md  01_reference_verification.md  02_geometry_optics.md  03_mosaic_ewald.md  04_ordered_reflectivity.md  05_stacking_transition.md  06_parallel_review.md  07_integration.md  08_selection_indexing.md  09_fit_foundation.md  10_instrument_calibration.md  11_sample_geometry_fit.md  12_mosaic_fit.md  13_ordered_intensity_fit.md  14_stacking_intensity_fit.md  15_caking_qspace.md  OVERNIGHT_RUNBOOK.md  README.md  continuous_ewald_coating_replacement_plan.md  hbn_ring_fitter_plan.md  hbn_ring_fitter_todo.md  index.yaml  mosaic_distribution_fitting_plan.md  parallel_simulation_geometry_fitting_plan.md  plan.md  todo.md
(+147 files in other folders)
